fix: formatting on smaller screens

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -145,6 +145,9 @@ body {
         width: 100%;
         max-width: 100%;
     }
+    .sidebar {
+        align-items: center;
+    }
     .links {
         max-width: 100%;
         height: 140px;
@@ -161,6 +164,7 @@ body {
     }
     .portrait-container {
         width: 100%;
+        max-width: 400px;
         aspect-ratio: 4/3;
     }
     .links-container {
